update gradle build